# complexity

./: .pdm-python  LICENSE  README.md  pyproject.toml
src/complexity/: bifurcation.py
src/complexity/bifurcation/: bifurcation.py  i_map_func.py  i_map_func_factory.py  logistic_map_func.py  logistic_map_func_factory.py  model.py
src/complexity/bifurcation/cubic/: cubic_map_func.py  cubic_map_func_factory.py
src/complexity/bifurcation/logistic/: logistic_map_func.py  logistic_map_func_factory.py
tests/complexity/bifurcation/: test_model.py
