[project]
name = "complexity"
version = "0.1.0"
description = "Tools for studying complexity."
authors = [
    {name = "Chris Hughes", email = "hughes036@gmail.com"},
]
dependencies = [
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "black>=23.12.1",
    "pytest>=7.4.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
